// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assigning a course to someone else through a CourseCard works, when the course has not been started yet. 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c6 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c6:hover {
  color: #cc2956;
}

.c6:focus {
  outline: none;
}

.c8 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c8:hover,
.c8:focus {
  color: #fff;
}

.c8:hover,
.c8:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c8:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c9 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c7 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      onClick={[Function]}
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      className="c7 c8"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c9"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </div>
</li>
`;

exports[`Assigning a course to someone else through a CourseCard works, when there are enrollments left. 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c13 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c13:hover {
  color: #cc2956;
}

.c13:focus {
  outline: none;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c11 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c12 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c11"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c12"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c13"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c13 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c13:hover {
  color: #cc2956;
}

.c13:focus {
  outline: none;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c11 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c12 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c11"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c12"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c13"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has no unassigned enrollments left, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c10 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c10:hover,
.c10:focus {
  color: #fff;
}

.c10:hover,
.c10:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c10:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c11 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c12 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        50
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      className="c9 c10"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c11"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c12"
    >
      <span>
        5 / 5 assigned.
      </span>
       
      <a
        href="/courses/enrollments"
        onClick={[Function]}
      >
        <span>
          View
        </span>
      </a>
       | 
      <a
        href="http://yoast.test/shop"
      >
        <span>
          Get more
        </span>
      </a>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has not been bought, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c10 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c10:hover {
  color: #cc2956;
}

.c10:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c7:hover,
.c7:focus {
  color: #fff;
}

.c7:hover,
.c7:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c7:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c8 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c9 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c6 {
  background-color: #a4286a;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <div
    className="c2"
  >
    <a
      className="c3"
      href={null}
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <a
      className="c6 c7"
      href="http://yoast.test/shop"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Get the full course
      </span>
      <span
        className="screen-reader-text c8"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c9"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c10"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has not been started yet with a single enrollment, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c6 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c6:hover {
  color: #cc2956;
}

.c6:focus {
  outline: none;
}

.c8 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c8:hover,
.c8:focus {
  color: #fff;
}

.c8:hover,
.c8:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c8:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c9 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c7 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      onClick={[Function]}
    >
      <span>
        Assign to someone else
      </span>
    </button>
    <a
      className="c7 c8"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c9"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that has not been started yet with multiple other enrollment, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c10 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c10:hover {
  color: #cc2956;
}

.c10:focus {
  outline: none;
}

.c7 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c7:hover,
.c7:focus {
  color: #fff;
}

.c7:hover,
.c7:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c7:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c8 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c9 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c6 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <a
      className="c6 c7"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Start this course
      </span>
      <span
        className="screen-reader-text c8"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c9"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c10"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that is completed, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c2 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c3 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  margin: 0;
}

.c14 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c14:hover {
  color: #cc2956;
}

.c14:focus {
  outline: none;
}

.c11 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c11:hover,
.c11:focus {
  color: #fff;
}

.c11:hover,
.c11:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c11:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c10 {
  color: #000;
  background-color: #fff;
  border: 1px solid #000;
  min-width: 152px;
  text-shadow: none;
}

.c10:hover,
.c10:focus {
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border: 0;
  text-shadow: 0px 0px 2px #000;
}

.c6 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c8 {
  width: 100%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c7 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #fff;
}

.c12 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c5 {
  padding: 24px;
  text-align: center;
}

.c13 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c9 {
  margin-top: 24px;
  width: 100%;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <div
    className="c2"
  >
    <a
      className="c3"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c4"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <span
        aria-label="current progress"
        className="c7"
      >
        100
        %
      </span>
      <div
        className="c8"
      />
    </div>
    <a
      className="c9 c10 c11"
      href="http://yoast.academy.test/certificate"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        View your certificate
      </span>
      <span
        className="screen-reader-text c12"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c13"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c14"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that is free, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c4 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c5 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  margin: 0;
}

.c2 {
  position: absolute;
  top: 8px;
  left: -8px;
  font-weight: 500;
  color: #fff;
  line-height: 16px;
  background-color: #a4286a;
  padding: 8px 16px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c3 {
  position: absolute;
  top: 40px;
  left: -8px;
  border-top: 8px solid #6c2548;
  border-left: 8px solid transparent;
}

.c15 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c15:hover {
  color: #cc2956;
}

.c15:focus {
  outline: none;
}

.c12 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c12:hover,
.c12:focus {
  color: #fff;
}

.c12:hover,
.c12:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c12:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c8 {
  position: relative;
  background-color: #ddd;
  border-radius: 5px;
  text-align: right;
}

.c10 {
  width: 50%;
  height: 25px;
  background-color: #77b227;
  border-radius: 5px;
}

.c9 {
  position: absolute;
  right: 10px;
  line-height: 25px;
  font-size: 0.75em;
  font-weight: bold;
  color: #000;
}

.c13 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c7 {
  padding: 24px;
  text-align: center;
}

.c14 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c11 {
  margin-top: 24px;
  background-color: #77b227;
  color: #fff;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <a
    href="http://yoast.academy.test/awesome_seo"
  >
    <img
      alt="Awesome SEO Course"
      className="c1"
      src="sample_course_card_header.png"
    />
  </a>
  <span
    className="c2"
  >
    Free
  </span>
  <span
    className="c3"
  />
  <div
    className="c4"
  >
    <a
      className="c5"
      href="http://yoast.academy.test/awesome_seo"
    >
      Awesome SEO Course
    </a>
    <p
      className="c6"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      <span
        aria-label="current progress"
        className="c9"
      >
        50
        %
      </span>
      <div
        className="c10"
      />
    </div>
    <a
      className="c11 c12"
      href="http://yoast.academy.test/awesome_seo"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Continue this course
      </span>
      <span
        className="screen-reader-text c13"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c14"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c15"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;

exports[`The CourseCard component, for a course that is on sale, matches the snapshot 1`] = `
.c0 {
  position: relative;
  background-color: #fff;
  width: 288px;
  font-size: 1em;
  list-style-type: none;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c1 {
  width: 100%;
}

.c4 {
  margin: 0px;
  padding: 20px;
  padding-top: 10px;
  border-bottom: 1px #ddd solid;
}

.c5 {
  padding: 0;
  margin: 0;
  margin-bottom: 15px;
  color: #a4286a;
  font-weight: 50;
  font-size: 1.5em;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6 {
  margin: 0;
}

.c2 {
  position: absolute;
  top: 8px;
  left: -8px;
  font-weight: 500;
  color: #000;
  line-height: 16px;
  background-color: #ffeb3b;
  padding: 8px 16px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c3 {
  position: absolute;
  top: 40px;
  left: -8px;
  border-top: 8px solid #6c2548;
  border-left: 8px solid transparent;
}

.c12 {
  background: none;
  border: 0px;
  padding: 0;
  color: #0066cd;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-weight: bold;
  cursor: pointer;
}

.c12:hover {
  color: #cc2956;
}

.c12:focus {
  outline: none;
}

.c9 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c9:hover,
.c9:focus {
  color: #fff;
}

.c9:hover,
.c9:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c9:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c10 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c7 {
  padding: 24px;
  text-align: center;
}

.c11 {
  font-weight: bold;
  margin: 0;
  margin-top: 24px;
}

.c8 {
  background-color: #ffeb3b;
  color: #000;
  width: 100%;
  text-shadow: none;
}

<li
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="sample_course_card_header.png"
  />
  <span
    className="c2"
  >
    Now 101% of!
  </span>
  <span
    className="c3"
  />
  <div
    className="c4"
  >
    <a
      className="c5"
      href={null}
    >
      Awesome SEO Course
    </a>
    <p
      className="c6"
    >
      This is an awesome, sexy SEO course.
    </p>
  </div>
  <div
    className="c7"
  >
    <a
      className="c8 c9"
      href="http://yoast.test/shop"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Get the full course
      </span>
      <span
        className="screen-reader-text c10"
      >
        <span>
          (Opens in a new browser tab)
        </span>
      </span>
    </a>
    <p
      className="c11"
    >
      <span>
        4 / 5 assigned.
      </span>
       
      <button
        className="c12"
        onClick={[Function]}
      >
        <span>
          Assign courses
        </span>
      </button>
    </p>
  </div>
</li>
`;
